app/src/test/resources/programs/invalid/arrays/nonarrayTypesCannotBeDealocated.exe
// Int cannot be used as an array
foo main() -> Int = {
    let mut x: Int = 7;
    del x;
    x
}
